--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,33 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  height: 380px;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.App-header .nav {
+  color: #ff7473;
+}
+
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  line-height: 40px;
+  padding: 0 36px;
+  list-style: none;
+}
+
+.nav ul li {
+  cursor: pointer;
+}
+
+.nav ul li:not(:last-child) {
+  margin-right: 36px;
+}
+
+
 
 .App-link {
   color: #61dafb;
