--- a/src/App.less
+++ b/src/App.less
@@ -16,26 +16,23 @@
 
 .App-header .nav {
   color: #ff7473;
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    line-height: 40px;
+    padding: 0 36px;
+    list-style: none;
+
+    li {
+      cursor: pointer;
+      &:not(:last-child) {
+        margin-right: 36px;
+      }
+    }
+  }
 }
-
-.nav ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  line-height: 40px;
-  padding: 0 36px;
-  list-style: none;
-}
-
-.nav ul li {
-  cursor: pointer;
-}
-
-.nav ul li:not(:last-child) {
-  margin-right: 36px;
-}
-
-
 
 .App-link {
   color: #61dafb;
